<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.khupearl.smp.SmpToolbar
        android:id="@+id/addWorkToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addWorkToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/layout_margin_size" >


            <EditText
                android:id="@+id/workTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/hint_worktitle" />

            <EditText
                android:id="@+id/workContentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/vertical_margin_size"
                android:hint="@string/hint_workcontent" />

            <EditText
                android:id="@+id/workFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/vertical_margin_size"
                android:hint="@string/hint_workfield" />

            <EditText
                android:id="@+id/workDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_marginTop="@dimen/vertical_margin_size"
                android:focusable="false"
                android:clickable="true"
                android:hint="@string/hint_workdate" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_size"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/addMemberEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_memberemail"
                    android:inputType="textEmailAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/addMemberButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <Button
                    android:id="@+id/addMemberButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_listitem"
                    android:text="@string/addmember_button"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/vertical_margin_size"
                    app:layout_constraintStart_toEndOf="@id/addMemberEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ListView
                android:id="@+id/addMemberListView"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/addWorkButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_listitem"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:text="추    가"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>